--- a/python interview questions.ipynb
+++ b/python interview questions.ipynb
@@ -386,10 +386,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a413e7d7",
    "metadata": {},
-   "source": []
+   "source": [
+    "If you create a variable with the same name inside a function, this variable will be local, and can only be used inside the function. The global variable with the same name will remain as it was, global and with the original value."
+   ]
   },
   {
    "cell_type": "code",
