--- a/python interview questions.ipynb
+++ b/python interview questions.ipynb
@@ -386,7 +386,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a413e7d7",
    "metadata": {},
@@ -395,9 +394,223 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3b0baac",
+   "metadata": {},
+   "source": [
+    "## Explain categories of functions in python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66198265",
+   "metadata": {},
+   "source": [
+    "There are two types of functions in python:\n",
+    "\n",
+    "User-Defined Functions - these types of functions are defined by the user to perform any specific task.\n",
+    "\n",
+    "Built-in Functions - these types of functions are pre-defined in python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "241a79ef",
+   "metadata": {},
+   "source": [
+    "## What is the use of format function in python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c9d4ab48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For only 49.00 dollars!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The format() method formats the specified value(s) and insert them inside the string's placeholder.\n",
+    "txt = \"For only {price:.2f} dollars!\"\n",
+    "print(txt.format(price = 49))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6475801",
+   "metadata": {},
+   "source": [
+    "## Explain how you can access a module in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa003c6b",
+   "metadata": {},
+   "source": [
+    "In Python, modules are accessed by using the import statement. When you do this, you execute the code of the module, keeping the scopes of the definitions so that your current file(s) can make use of these.\n",
+    "\n",
+    "import "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed4d5651",
+   "metadata": {},
+   "source": [
+    "## Explain the use of // operator in python\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2facb7cc",
+   "metadata": {},
+   "source": [
+    "flor division "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b477409",
+   "metadata": {},
+   "source": [
+    "# What is the use of split function in python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffc3d616",
+   "metadata": {},
+   "source": [
+    "The split() method splits a string into a list.\n",
+    "\n",
+    "You can specify the separator, default separator is any whitespace.\n",
+    "\n",
+    "# Syntax:-\n",
+    "string.split(separator, maxsplit)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "98a93eb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'my name is Peter', 'I am 26 years old']\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = \"hello, my name is Peter, I am 26 years old\"\n",
+    "\n",
+    "x = txt.split(\", \")\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "692f989d",
+   "metadata": {},
+   "source": [
+    "## What is a keyword and how many keywords are available in python \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2df0cdff",
+   "metadata": {},
+   "source": [
+    "There are 33 keywords in Python 3.7 let's go through all of them one by one\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "689c8312",
+   "metadata": {},
+   "source": [
+    "## What is PEP 8 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38ec2942",
+   "metadata": {},
+   "source": [
+    "PEP 8 covers various aspects of code style, such as the use of indentation, line lengths, naming conventions, and comments. The goal of PEP 8 is to improve the readability of code and make it easier for others to understand and maintain. Adhering to PEP 8 is considered a best practice for Python programming, and many open-source Python projects follow it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0235119f",
+   "metadata": {},
+   "source": [
+    "## How to check which version of python is installed in the system"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1e42acb",
+   "metadata": {},
+   "source": [
+    "Open the Command Prompt or Terminal on your computer.\n",
+    "\n",
+    "Type the following command and press Enter:\n",
+    "\n",
+    "python --version"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "948b2822",
+   "metadata": {},
+   "source": [
+    "## What is a list constructor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd53d81e",
+   "metadata": {},
+   "source": [
+    "A list constructor is a way to create a new list in Python. There are several ways to create a list, but the most common way is to use square brackets []:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "965bf6f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    ">>> numbers = [1, 2, 3, 4, 5]\n",
+    ">>> print(numbers)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb0c2c7c",
+   "id": "635b06d3",
    "metadata": {},
    "outputs": [],
    "source": []
