--- a/python interview questions.ipynb
+++ b/python interview questions.ipynb
@@ -608,9 +608,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2463e09a",
+   "metadata": {},
+   "source": [
+    "# What is slicing?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53e0b6d8",
+   "metadata": {},
+   "source": [
+    " A slice object is used to specify how to slice a sequence. You can specify where to start the slicing, and where to end. You can also specify the step, which allows you to e.g. slice only every other item"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4c5cd4e",
+   "metadata": {},
+   "source": [
+    "## How will you capitalize the first letter of a string?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "607a9f69",
+   "metadata": {},
+   "source": [
+    "The first letter of a string can be capitalized using the capitalize() function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33bfeb82",
+   "metadata": {},
+   "source": [
+    "## How to sort a list?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a30a3fec",
+   "metadata": {},
+   "source": [
+    "The sort() method sorts the items of a list in ascending or descending order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fb516c6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "prime_numbers = [11, 3, 7, 5, 2]\n",
+    "\n",
+    "# sorting the list in ascending order\n",
+    "prime_numbers.sort()\n",
+    "\n",
+    "print(prime_numbers)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89cff1b4",
+   "metadata": {},
+   "source": [
+    "## What is the function? difference between function and method "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "635b06d3",
+   "id": "c166f60e",
    "metadata": {},
    "outputs": [],
    "source": []
