--- a/python interview questions.ipynb
+++ b/python interview questions.ipynb
@@ -1050,9 +1050,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8055885b",
+   "metadata": {},
+   "source": [
+    "## What is the main purpose of polymorphism in python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7548add",
+   "metadata": {},
+   "source": [
+    "Polymorphism defines the ability to take different forms. Polymorphism in Python allows us to define methods in the child class with the same name as defined in their parent class."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7190ba1",
+   "metadata": {},
+   "source": [
+    "## How can we restrict access to methods and attributes?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebeb4552",
+   "id": "961d4d56",
    "metadata": {},
    "outputs": [],
    "source": []
